[package]
authors = ['Petr Mensik', 'Jindrich Zeleny', 'Michal Repetny']
description = 'FRAME pallet template for defining custom runtime logic.'
edition = '2018'
homepage = 'https://substrate.dev'
license = 'Apache-2.0'
name = 'pallet-auction'
readme = 'README.md'
repository = 'https://github.com/polkadotters/SubAuction'
version = '1.0.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
codec = { default-features = false, features = ['derive'], package = 'parity-scale-codec', version = '2.0.0' }
frame-benchmarking = {version = "3.1.0", default-features = false, optional = true}
frame-support = { default-features = false, version = '3.0.0' }
frame-system = { default-features = false, version = '3.0.0' }
pallet-nft = { path = '../nft', default-features = false, version = '1.0.0' }
sp-runtime = { version = "3.0.0", default-features = false }
sp-std = { version = "3.0.0", default-features = false }
orml-nft = { version = "0.4.0", default-features = false }

[dev-dependencies]
orml-nft = { version = "0.4.0", default-features = false }
pallet-balances = { version = "3.0.0" }
serde = { version = "1.0.111" }
sp-core = { default-features = false, version = '3.0.0' }
sp-io = { default-features = false, version = '3.0.0' }
sp-runtime = { default-features = false, version = '3.0.0' }

[features]
default = ['std']
std = [
    'codec/std',
    'frame-support/std',
    'frame-system/std',
    'sp-std/std',
    'sp-runtime/std',
    'pallet-nft/std',
    'orml-nft/std',
]
runtime-benchmarks = [
	"frame-benchmarking",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
] 